# NiftyOptionsBacktest

./: .env.example  .gitignore  CLAUDE.md  ENTRY.bat  EXIT.bat  SIGNAL.bat  START_OPTIONS_LTP.bat  START_SCHEDULER.bat  START_STRESS_TEST.bat  STRATEGY.md  WEEKLY_BACKFILL.bat  analyse_trades.py  check_sids.py  fetch_and_cache_ltps.py  ladder_width_compare.py  options_ltp_service.py  patch_sids.py  pipeline.py  pyproject.toml  scheduler.py  stress_test_dynamic_subscriptions.py
src/: backtest.py  builder.py  config.py  dhan_instruments.py  fetcher.py  paper_trade.py  signal.py  validator.py
